--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@types/cors": "^2.8.13",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "knex": "^2.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sqlite3": "^5.1.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,6 +43,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
+    "@types/knex": "^0.16.1",
     "ts-node-dev": "^2.0.0"
   }
 }
